--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" async src="https://www.google-analytics.com/gtm/js?id=GTM-WJ88MZ5&cid=1462730100.1602940352"></script>
     <script src="https://apis.google.com/_/scs/apps-static/_/js/k=oz.gapi.en_US.2laq3Py8kJk.O/m=client/rt=j/sv=1/d=1/ed=1/am=wQE/rs=AGLTcCNOVyb6DDYv7xgJGtF_6RiAl0K1Kw/cb=gapi.loaded_0" async></script>
     <script async src="www.google-analytics.com/analytics.js"></script>
-    <script src="libs/codemirror.js"></script>
+    <script src="https://www.w3schools.com/lib/codemirror.js"></script>
     <script src="libs/codemirror_jsx.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
